Changes per review. Make session_id mandatory and just a string. Move to LRU crate.

--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.43", features = ["full"] }
 reqwest = { version = "0.12.9", features = ["json", "rustls-tls-native-roots"], default-features = false }
 
 [dependencies]
+lru = "0.12"
 mcp-client = { path = "../mcp-client" }
 mcp-core = { path = "../mcp-core" }
 rmcp = { workspace = true, features = [
