--- a/ui/desktop/package.json
+++ b/ui/desktop/package.json
@@ -85,6 +85,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
+    "typo-js": "^1.3.1",
     "unist-util-visit": "^5.0.0",
     "uuid": "^13.0.0",
     "zod": "^3.25.76"
@@ -117,6 +118,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/typo-js": "^1.2.2",
     "@types/yauzl": "^2.10.3",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
