Convert all references from uppercase 'Goose' to lowercase 'goose'
- Update build configuration (package.json, forge.config.ts) to use lowercase productName and binary names
- Update all GitHub CI/CD workflows to use lowercase directory and executable names:
  - Windows: Goose.exe → goose.exe, Goose-win32-x64 → goose-win32-x64
  - macOS: Goose.app → goose.app, Goose-darwin-* → goose-darwin-*
  - Linux: Goose-linux-x64 → goose-linux-x64
- Update documentation (BUILDING_LINUX.md, README files) with lowercase paths and executable names
- Update test files with lowercase path references for Windows and macOS builds
- Update API provider headers and user agents to use lowercase 'goose' in:
  - snowflake.rs, tetrate.rs, openrouter.rs, computercontroller/mod.rs
- Update launcher script (goose-gui.sh) with lowercase paths and executable names
- Update all user-facing download links and installation instructions

This ensures consistent lowercase naming across the entire codebase and build pipeline
while maintaining full backward compatibility and functionality.

--- a/.github/workflows/bundle-desktop-intel.yml
+++ b/.github/workflows/bundle-desktop-intel.yml
@@ -192,10 +192,10 @@ jobs:
           source_job_url="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           unsigned_url="s3://block-goose-artifacts-bucket-production/unsigned/goose-${GITHUB_SHA}-${{ github.run_id }}-intel.zip"
 
-          zip -q -u -r out/Goose-darwin-x64/Goose_intel_mac.zip entitlements.plist
+          zip -q -u -r out/goose-darwin-x64/goose_intel_mac.zip entitlements.plist
 
           # upload unsigned goose to transfer bucket so it can be passed to lambda
-          aws s3 cp --quiet out/Goose-darwin-x64/Goose_intel_mac.zip "${unsigned_url}"
+          aws s3 cp --quiet out/goose-darwin-x64/goose_intel_mac.zip "${unsigned_url}"
 
           # begin signing
           echo "🚀 launching signing process"
@@ -247,7 +247,7 @@ jobs:
 
           # download the signed app from S3
           echo "⬇️ downloading signed app"
-          aws s3 cp --quiet "${signed_url}" out/Goose-darwin-x64/Goose_intel_mac.zip
+          aws s3 cp --quiet "${signed_url}" out/goose-darwin-x64/goose_intel_mac.zip
         working-directory: ui/desktop
 
       - name: Final cleanup before artifact upload
@@ -261,26 +261,26 @@ jobs:
       - name: Upload Desktop artifact
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # pin@v4
         with:
-          name: Goose-darwin-x64
-          path: ui/desktop/out/Goose-darwin-x64/Goose_intel_mac.zip
+          name: goose-darwin-x64
+          path: ui/desktop/out/goose-darwin-x64/goose_intel_mac.zip
 
       - name: Quick launch test (macOS)
         if: ${{ inputs.quick_test }}
         run: |
           # Ensure no quarantine attributes (if needed)
-          xattr -cr "ui/desktop/out/Goose-darwin-x64/Goose.app"
-          echo "Opening Goose.app..."
-          open -g "ui/desktop/out/Goose-darwin-x64/Goose.app"
+          xattr -cr "ui/desktop/out/goose-darwin-x64/goose.app"
+          echo "Opening goose.app..."
+          open -g "ui/desktop/out/goose-darwin-x64/goose.app"
 
           # Give the app a few seconds to start and write logs
           sleep 5
 
           # Check if it's running
-          if pgrep -f "Goose.app/Contents/MacOS/Goose" > /dev/null; then
+          if pgrep -f "goose.app/Contents/MacOS/goose" > /dev/null; then
             echo "App appears to be running."
           else
             echo "App did not stay open. Possible crash or startup error."
             exit 1
           fi
           # Kill the app to clean up
-          pkill -f "Goose.app/Contents/MacOS/Goose"
+          pkill -f "goose.app/Contents/MacOS/goose"
