--- a/.github/workflows/pr-comment-bundle-intel.yml
+++ b/.github/workflows/pr-comment-bundle-intel.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Download Intel artifact
         uses: actions/download-artifact@cc203385981b70ca67e1cc392babf9cc229d5806 # pin@v4
         with:
-          name: Goose-darwin-x64
+          name: goose-darwin-x64
           path: intel-dist
 
       - name: Comment on PR with Intel download link
@@ -91,9 +91,9 @@ jobs:
           body: |
             ### macOS Intel Desktop App (x64)
 
-            [💻 Download macOS Desktop App (Intel x64, signed)](https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/Goose-darwin-x64.zip)
+            [💻 Download macOS Desktop App (Intel x64, signed)](https://nightly.link/${{ github.repository }}/actions/runs/${{ github.run_id }}/goose-darwin-x64.zip)
 
             **Instructions:**
-            After downloading, unzip the file and drag the Goose.app to your Applications folder. The app is signed and notarized for macOS.
+            After downloading, unzip the file and drag the goose.app to your Applications folder. The app is signed and notarized for macOS.
 
             This link is provided by nightly.link and will work even if you're not logged into GitHub.
