--- a/.github/workflows/bundle-desktop.yml
+++ b/.github/workflows/bundle-desktop.yml
@@ -226,10 +226,10 @@ jobs:
           source_job_url="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           unsigned_url="s3://block-goose-artifacts-bucket-production/unsigned/goose-${GITHUB_SHA}-${{ github.run_id }}-arm64.zip"
           
-          zip -q -u -r out/Goose-darwin-arm64/Goose.zip entitlements.plist
+          zip -q -u -r out/goose-darwin-arm64/goose.zip entitlements.plist
 
           # upload unsigned goose to transfer bucket so it can be passed to lambda
-          aws s3 cp --quiet out/Goose-darwin-arm64/Goose.zip "${unsigned_url}"
+          aws s3 cp --quiet out/goose-darwin-arm64/goose.zip "${unsigned_url}"
 
           # begin signing
           echo "🚀 launching signing process"
@@ -281,7 +281,7 @@ jobs:
 
           # download the signed app from S3
           echo "⬇️ downloading signed app"
-          aws s3 cp --quiet "${signed_url}" out/Goose-darwin-arm64/Goose.zip
+          aws s3 cp --quiet "${signed_url}" out/goose-darwin-arm64/goose.zip
         working-directory: ui/desktop
 
       - name: Final cleanup before artifact upload
@@ -296,26 +296,26 @@ jobs:
         id: upload-app-bundle
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # pin@v4
         with:
-          name: Goose-darwin-arm64
-          path: ui/desktop/out/Goose-darwin-arm64/Goose.zip
+          name: goose-darwin-arm64
+          path: ui/desktop/out/goose-darwin-arm64/goose.zip
 
       - name: Quick launch test (macOS)
         if: ${{ inputs.quick_test }}
         run: |
           # Ensure no quarantine attributes (if needed)
-          xattr -cr "ui/desktop/out/Goose-darwin-arm64/Goose.app"
-          echo "Opening Goose.app..."
-          open -g "ui/desktop/out/Goose-darwin-arm64/Goose.app"
+          xattr -cr "ui/desktop/out/goose-darwin-arm64/goose.app"
+          echo "Opening goose.app..."
+          open -g "ui/desktop/out/goose-darwin-arm64/goose.app"
 
           # Give the app a few seconds to start and write logs
           sleep 5
 
           # Check if it's running
-          if pgrep -f "Goose.app/Contents/MacOS/Goose" > /dev/null; then
+          if pgrep -f "goose.app/Contents/MacOS/goose" > /dev/null; then
             echo "App appears to be running."
           else
             echo "App did not stay open. Possible crash or startup error."
             exit 1
           fi
           # Kill the app to clean up
-          pkill -f "Goose.app/Contents/MacOS/Goose"
+          pkill -f "goose.app/Contents/MacOS/goose"
