--- a/documentation/blog/authors.yml
+++ b/documentation/blog/authors.yml
@@ -71,8 +71,8 @@ tania:
   page: true
   socials:
     linkedin: taniachakraborty
-    x: taniashiba
-    github: taniashiba
+    x: taniandjerry
+    github: taniandjerry
     bluesky: taniachakraborty.com
 
 angie:
