Revert "Internal MCP Crate Cleanup (#4800)"
This reverts commit 146cf3185aac4aa6f841a39626fa2bd68937531d.

--- a/crates/goose-cli/Cargo.toml
+++ b/crates/goose-cli/Cargo.toml
@@ -18,6 +18,8 @@ path = "src/main.rs"
 goose = { path = "../goose" }
 goose-bench = { path = "../goose-bench" }
 goose-mcp = { path = "../goose-mcp" }
+mcp-client = { path = "../mcp-client" }
+mcp-core = { path = "../mcp-core" }
 rmcp = { workspace = true }
 agent-client-protocol = "0.4.0"
 clap = { version = "4.4", features = ["derive"] }
