--- a/crates/goose-server/Cargo.toml
+++ b/crates/goose-server/Cargo.toml
@@ -12,6 +12,7 @@ workspace = true
 
 [dependencies]
 goose = { path = "../goose" }
+mcp-core = { path = "../mcp-core" }
 goose-mcp = { path = "../goose-mcp" }
 rmcp = { workspace = true }
 schemars = "1.0"
