--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4
-      
+
       - name: Check for file changes
         uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # pin@v3
         id: filter
@@ -100,8 +100,8 @@ jobs:
           source ./bin/activate-hermit
           just check-openapi-schema
 
-  desktop-lint:
-    name: Lint Electron Desktop App
+  desktop-test:
+    name: Test and Lint Electron Desktop App
     runs-on: macos-latest
     needs: changes
     if: needs.changes.outputs.code == 'true' || github.event_name != 'pull_request'
