fix: correct YAML format for quick-note recipe
- Fixed instructions field format to use proper YAML multiline string
- Resolves validation error for recipe submission
- Maintains beginner recipe requirements (single extension)
- Ready for Hacktoberfest contribution

Fixes validation error reported in PR feedback

Signed-off-by: aegntic <team@aegntic.com>

--- a/documentation/src/pages/recipes/data/recipes/quick-note.yaml
+++ b/documentation/src/pages/recipes/data/recipes/quick-note.yaml
@@ -3,7 +3,8 @@ title: Quick Note
 author:
   contact: aegntic
 description: Create quick notes and organize them by date and tags
-instructions: Your job is to create, organize, and retrieve quick notes based on user input
+instructions: |
+  You are a note-taking assistant. Your job is to help users create, organize, and retrieve quick notes using the filesystem.
 activities:
   - Create timestamped note files
   - Organize notes by date
