Pause test finder, have it run cargo fmt

--- a/.github/workflows/test-finder.yml
+++ b/.github/workflows/test-finder.yml
@@ -1,9 +1,9 @@
 name: Daily Test Coverage Finder
 
 on:
-  schedule:
-    # Run daily at 2 AM UTC
-    - cron: '0 2 * * *'
+  # schedule:
+  #   # Run daily at 2 AM UTC - PAUSED
+  #   - cron: '0 2 * * *'
   workflow_dispatch:
     inputs:
       dry_run:
@@ -68,9 +68,10 @@ jobs:
              - Fix the test code
              - Apply the fix and run the test again
              - Repeat up to 3 times until the test passes
-          6. Once the test passes (or after 3 attempts), save the final changes as a git diff to /tmp/test_addition.patch
-          7. If successful, write the name of the function you tested to /tmp/function_tested.txt (just the function name, e.g., "check_tool_call" or "MyStruct::my_method")
-          8. Only create the patch file if the test actually passes
+          6. Once the test passes, run `cargo fmt` to format all the code properly
+          7. After formatting, save the final changes as a git diff to /tmp/test_addition.patch
+          8. If successful, write the name of the function you tested to /tmp/function_tested.txt (just the function name, e.g., "check_tool_call" or "MyStruct::my_method")
+          9. Only create the patch file if the test actually passes
 
           Important:
           - Only add ONE test for ONE function
