--- a/documentation/src/pages/recipes/data/recipes/full-stack-project-initializer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/full-stack-project-initializer.yaml
@@ -1,6 +1,6 @@
 version: 1.0.0
-title: Full-Stack Project Initializer
-description: An advanced recipe that orchestrates complete full-stack project initialization with intelligent framework detection, dependency management, code quality setup, and comprehensive documentation generation
+title: Software Project Generator
+description: An advanced recipe that orchestrates complete project initialization (frontend, backend, full-stack, CLI, API) with intelligent framework detection, dependency management, code quality setup, and comprehensive documentation generation
 author:
   contact: ARYPROGRAMMER
 
@@ -13,8 +13,10 @@ activities:
   - Install dependencies and verify project health
 
 instructions: |
-  You are a Full-Stack Project Initializer that creates production-ready project structures with best practices.
+  You are a Software Project Generator that creates production-ready project structures with best practices.
   Create complete projects with frontend, backend, testing, linting, Docker, CI/CD, and documentation based on user parameters.
+  
+  IMPORTANT: Detect the operating system you're running on. If on Windows, be careful with disk paths - use forward slashes or properly escape backslashes to avoid path separators being interpreted as escape characters (e.g., avoid c:\src\react-project where \r becomes a carriage return).
 
 parameters:
   - key: project_name
@@ -98,95 +100,95 @@ prompt: |
   {% if frontend_framework != "none" %}
   2. Frontend Setup
      {% if frontend_framework == "react" %}
-     Create React app with Vite and TypeScript in the frontend directory.
-     Install react-router-dom and axios.
-     Create src/components, src/pages, src/hooks, src/utils, src/services directories.
-     Set up ESLint, Prettier, and Vitest for testing.
-     Create example Welcome component and test.
+       Create React app with Vite and TypeScript in the frontend directory.
+       Install react-router-dom and axios.
+       Create src/components, src/pages, src/hooks, src/utils, src/services directories.
+       Set up ESLint, Prettier, and Vitest for testing.
+       Create example Welcome component and test.
      {% elif frontend_framework == "vue" %}
-     Create Vue 3 app with TypeScript, Router, and Pinia.
-     Install axios and dev dependencies.
-     Set up linting and testing.
+       Create Vue 3 app with TypeScript, Router, and Pinia.
+       Install axios and dev dependencies.
+       Set up linting and testing.
      {% elif frontend_framework == "nextjs" %}
-     Create Next.js app with TypeScript and Tailwind.
-     Install axios and swr.
+       Create Next.js app with TypeScript and Tailwind.
+       Install axios and swr.
      {% elif frontend_framework == "svelte" %}
-     Create SvelteKit app with TypeScript.
-     Install axios and configure.
+       Create SvelteKit app with TypeScript.
+       Install axios and configure.
      {% endif %}
      Create .env.example and README.md for frontend.
      {% if include_testing == "true" %}
      Set up testing framework:
-     {% if frontend_framework == "react" %}
-     Configure Vitest with React Testing Library.
-     Create tests for components in __tests__ directories.
-     Add integration tests for key user flows.
-     {% elif frontend_framework == "vue" %}
-     Configure Vitest with Vue Test Utils.
-     Create component and integration tests.
-     {% elif frontend_framework == "nextjs" %}
-     Configure Jest with React Testing Library.
-     Create unit and integration tests.
-     {% elif frontend_framework == "svelte" %}
-     Configure Vitest with Svelte Testing Library.
-     Create component tests.
-     {% endif %}
-     Add test scripts to package.json (test, test:watch, test:coverage).
+       {% if frontend_framework == "react" %}
+         Configure Vitest with React Testing Library.
+         Create tests for components in __tests__ directories.
+         Add integration tests for key user flows.
+       {% elif frontend_framework == "vue" %}
+         Configure Vitest with Vue Test Utils.
+         Create component and integration tests.
+       {% elif frontend_framework == "nextjs" %}
+         Configure Jest with React Testing Library.
+         Create unit and integration tests.
+       {% elif frontend_framework == "svelte" %}
+         Configure Vitest with Svelte Testing Library.
+         Create component tests.
+       {% endif %}
+       Add test scripts to package.json (test, test:watch, test:coverage).
      {% endif %}
   {% endif %}
   
   {% if backend_framework != "none" %}
   3. Backend Setup
      {% if backend_framework == "nodejs" %}
-     Initialize Node.js backend with Express and TypeScript.
-     Install express, cors, dotenv, helmet, morgan, and types.
-     {% if database == "postgresql" %}Install pg and @types/pg{% elif database == "mongodb" %}Install mongoose{% elif database == "mysql" %}Install mysql2{% elif database == "sqlite" %}Install better-sqlite3{% endif %}.
-     Create src/ with routes, controllers, models, middleware, config, utils directories.
-     Create src/index.ts with Express server and health endpoint.
-     Set up TypeScript, ESLint, Prettier, Jest, and Supertest.
-     Create example health check test.
+       Initialize Node.js backend with Express and TypeScript.
+       Install express, cors, dotenv, helmet, morgan, and types.
+       {% if database == "postgresql" %}Install pg and @types/pg{% elif database == "mongodb" %}Install mongoose{% elif database == "mysql" %}Install mysql2{% elif database == "sqlite" %}Install better-sqlite3{% endif %}.
+       Create src/ with routes, controllers, models, middleware, config, utils directories.
+       Create src/index.ts with Express server and health endpoint.
+       Set up TypeScript, ESLint, Prettier, Jest, and Supertest.
+       Create example health check test.
      {% elif backend_framework == "python-fastapi" %}
-     Create Python backend with virtual environment.
-     Create requirements.txt with FastAPI, Uvicorn, and database drivers.
-     Install dependencies.
-     Create app/ with routers, models, schemas, services, core directories.
-     Create app/main.py with FastAPI and health endpoint.
-     Set up Black, Flake8, Mypy, and Pytest.
+       Create Python backend with virtual environment.
+       Create requirements.txt with FastAPI, Uvicorn, and database drivers.
+       Install dependencies.
+       Create app/ with routers, models, schemas, services, core directories.
+       Create app/main.py with FastAPI and health endpoint.
+       Set up Black, Flake8, Mypy, and Pytest.
      {% elif backend_framework == "go" %}
-     Initialize Go module.
-     Install Gin and database libraries.
-     Create cmd/api, internal/handlers, internal/models directories.
-     Create main.go with Gin server and health endpoint.
-     Set up golangci-lint and tests.
+       Initialize Go module.
+       Install Gin and database libraries.
+       Create cmd/api, internal/handlers, internal/models directories.
+       Create main.go with Gin server and health endpoint.
+       Set up golangci-lint and tests.
      {% elif backend_framework == "rust-actix" %}
-     Create Rust project with cargo.
-     Add Actix-web dependencies to Cargo.toml.
-     Create main.rs with Actix server and health endpoint.
-     Set up rustfmt and clippy.
+       Create Rust project with cargo.
+       Add Actix-web dependencies to Cargo.toml.
+       Create main.rs with Actix server and health endpoint.
+       Set up rustfmt and clippy.
      {% endif %}
      Create .env.example and README.md for backend.
      {% if include_testing == "true" %}
      Set up testing framework:
-     {% if backend_framework == "nodejs" %}
-     Configure Jest and Supertest for API testing.
-     Create tests for routes, controllers, and services.
-     Add integration tests for database operations.
-     Create __tests__ directories alongside source files.
-     {% elif backend_framework == "python-fastapi" %}
-     Configure Pytest with pytest-asyncio and httpx.
-     Create tests for endpoints, services, and models.
-     Add integration tests for database operations.
-     Set up test fixtures and mocks.
-     {% elif backend_framework == "go" %}
-     Set up Go testing with testify.
-     Create _test.go files for handlers and services.
-     Add integration tests for API endpoints.
-     {% elif backend_framework == "rust-actix" %}
-     Configure cargo test with actix-web test utilities.
-     Create unit and integration tests.
-     Add test modules in src files.
-     {% endif %}
-     Add test scripts with coverage reporting.
+       {% if backend_framework == "nodejs" %}
+         Configure Jest and Supertest for API testing.
+         Create tests for routes, controllers, and services.
+         Add integration tests for database operations.
+         Create __tests__ directories alongside source files.
+       {% elif backend_framework == "python-fastapi" %}
+         Configure Pytest with pytest-asyncio and httpx.
+         Create tests for endpoints, services, and models.
+         Add integration tests for database operations.
+         Set up test fixtures and mocks.
+       {% elif backend_framework == "go" %}
+         Set up Go testing with testify.
+         Create _test.go files for handlers and services.
+         Add integration tests for API endpoints.
+       {% elif backend_framework == "rust-actix" %}
+         Configure cargo test with actix-web test utilities.
+         Create unit and integration tests.
+         Add test modules in src files.
+       {% endif %}
+       Add test scripts with coverage reporting.
      {% endif %}
   {% endif %}
   
