--- a/documentation/src/pages/recipes/data/recipes/github-pr-summarizer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/github-pr-summarizer.yaml
@@ -5,10 +5,18 @@ description: >
 instructions: |
   1. Connect to the GitHub extension with your repository link.
   2. Retrieve open pull requests.
-  3. Pass the PR descriptions into the Summarizer.
-  4. Return a clean summary of all open PRs.
-
+  3. Pass the PR titles, descriptions, and commit messages into the Summarizer.
+  4. If PR descriptions are incomplete, have Goose analyze commit messages
+     or code changes to provide more context.
+  5. Generate a clear summary that includes:
+     - The total count of open PRs.
+     - A one-sentence TL;DR for each PR.
+     - Extra context from commits/changes if descriptions are lacking.
 activities:
   - "Use the GitHub extension to list open pull requests from the repo block/goose"
-  - "Send the PR titles and descriptions to the Summarizer extension"
-  - "Generate a concise summary of all open PRs"
+  - "Send PR titles, descriptions, and commit messages to the Summarizer extension"
+  - "Generate a summary that includes PR count and concise details of each PR"
+
+extensions:
+  - github
+  - summarizer
