--- a/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
@@ -37,7 +37,7 @@ extensions:
     name: filesystem
     display_name: Filesystem
     timeout: 300
-    bundled: true
+    bundled: false
 prompt: |
   {% if source_type == "files" or source_type == "all" %}
   1. Scan the current directory and subdirectories for files that might contain tasks:
