Apply suggestion from @blackgirlbytes
Signed-off-by: aegntic <research@aegntic.ai>

--- a/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
@@ -33,7 +33,7 @@ parameters:
     description: "Filter tasks by specific project name"
     default: ""
 extensions:
-  - type: builtin
+  - type: stdio
     name: filesystem
     display_name: Filesystem
     timeout: 300
