fix: add cmd field for stdio filesystem extension
Signed-off-by: aegntic <research@aegntic.ai>

--- a/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
@@ -35,6 +35,7 @@ parameters:
 extensions:
   - type: stdio
     name: filesystem
+    cmd: goose
     display_name: Filesystem
     timeout: 300
     bundled: true
