fix: add args field for stdio filesystem extension
Signed-off-by: aegntic <research@aegntic.ai>

--- a/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
@@ -36,6 +36,7 @@ extensions:
   - type: stdio
     name: filesystem
     cmd: goose
+    args: ["mcp", "filesystem"]
     display_name: Filesystem
     timeout: 300
     bundled: true
