--- a/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
@@ -40,78 +40,196 @@ extensions:
     display_name: Filesystem
     timeout: 300
     bundled: true
-prompt: |
-  {% if source_type == "files" or source_type == "all" %}
-  1. Scan the current directory and subdirectories for files that might contain tasks:
-     - Look for files with extensions: .txt, .md, .doc, .docx, .notes, .todo
-     - Also check README files, meeting notes, and project files
-     - Search for common task indicators: TODO, FIXME, ACTION ITEM, TASK, REMINDER, FOLLOW UP
+prompts:
+  # Phase 1: Discovery and Scanning
+  discovery_prompt: |
+    You are a Task Discovery Agent. Your job is to scan and identify potential tasks from various sources.
 
+    {% if source_type == "files" or source_type == "all" %}
+    Scan the current directory and subdirectories for files that might contain tasks:
+    - Look for files with extensions: .txt, .md, .doc, .docx, .notes, .todo
+    - Check README files, meeting notes, and project files
+    - Search for task indicators: TODO, FIXME, ACTION ITEM, TASK, REMINDER, FOLLOW UP, NEED TO, SHOULD
+
+    For each file found, extract:
+    - File path and name
+    - Raw task text
+    - Context surrounding the task
+    - Any deadline or priority mentions
+    {% endif %}
+
+    {% if source_type == "emails" or source_type == "all" %}
+    Look for email files or export files (.eml, .msg, .txt) that might contain tasks:
+    - Search for action verbs: please, need to, should, must, review, complete, submit
+    - Look for deadline indicators: by, due, EOD, EOW, ASAP, urgent
+    - Extract sender/recipient context
+    {% endif %}
+
+    {% if source_type == "messages" or source_type == "all" %}
+    Check for chat logs, message exports, or conversation files:
+    - Extract commitments and promises made
+    - Identify questions that need responses
+    - Find meeting follow-ups required
+    - Note conversation participants and context
+    {% endif %}
+
+    {% if source_type == "notes" or source_type == "all" %}
+    Scan for note files and brain dumps:
+    - Convert random thoughts into actionable items
+    - Organize ideas into concrete tasks
+    - Identify dependencies between tasks
+    {% endif %}
+
+    Return a structured list of raw task candidates with their source context.
+
+  # Phase 2: Task Analysis and Prioritization
+  analysis_prompt: |
+    You are a Task Analysis Agent. Your job is to analyze raw task candidates and extract structured information.
+
+    For each task candidate provided:
+    1. Extract and standardize:
+       - Clear task description (what needs to be done)
+       - Priority level (urgent/high/medium/low) based on context
+       - Project or category affiliation
+       - Deadline (if mentioned, normalize to standard format)
+       - Dependencies (what needs to be done first)
+       - Estimated time to complete (if inferable)
+       - Source location and context
+
+    2. Apply prioritization rules:
+       - URGENT: Today deadlines, blocking others, explicit "urgent" markers
+       - HIGH: This week deadlines, important milestones, commitments to others
+       - MEDIUM: Important but flexible, personal goals, nice-to-have-soon
+       - LOW: Ideas, future considerations, optional improvements
+
+    3. Convert vague items to specific actions:
+       - "work on project" → "Review project requirements document and create task breakdown"
+       - "fix bugs" → "Identify and prioritize top 3 critical bugs in the backlog"
+       - "update documentation" → "Update API documentation for new endpoints added in v2.1"
+
+    Return structured task objects with all extracted fields.
+
+  # Phase 3: Organization and Structuring
+  organization_prompt: |
+    You are a Task Organization Agent. Your job is to organize analyzed tasks into a structured, actionable format.
+
+    Organize the provided tasks into the following structure:
+
+    ## 🚀 URGENT TASKS (Today)
+    [Tasks that must be completed today - include specific deadlines]
+
+    ## 📅 HIGH PRIORITY (This Week)
+    [Important tasks with clear deadlines this week]
+
+    ## 🎯 MEDIUM PRIORITY (This Sprint/Month)
+    [Important but less time-sensitive tasks]
+
+    ## 📝 LOW PRIORITY (When Time Allows)
+    [Nice-to-have tasks and ideas]
+
+    For each task, include:
+    - ✅ [Status] Task title (clear action verb + specific outcome)
+    - 📅 Deadline: [specific date or timeframe]
+    - 🎯 Project: [project/category]
+    - ⏱️ Estimate: [time estimate if available]
+    - 🔄 Dependencies: [what needs to be done first]
+    - 📍 Source: [where this task came from]
+
+    Group related tasks together when possible and suggest logical workflows.
+
+  # Phase 4: Summary and Action Planning
+  summary_prompt: |
+    You are an Action Planning Agent. Your job is to provide a comprehensive summary and immediate next steps.
+
+    Based on the organized task list, provide:
+
+    ## 📊 Task Summary
+    - Total tasks found: [number]
+    - Tasks by priority: Urgent: [X], High: [Y], Medium: [Z], Low: [W]
+    - Tasks by project: [breakdown]
+    - Estimated completion time: [total if available]
+
+    ## 🎯 Immediate Next Steps (Top 3)
+    1. [Most urgent task with clear first step]
+    2. [Second priority task]
+    3. [Third priority task]
+
+    ## ⚠️ Potential Blockers
+    - [List any dependencies, resource constraints, or timing conflicts]
+
+    ## 💡 Optimization Suggestions
+    - [Suggest ways to batch similar tasks, delegate, or streamline workflow]
+
+    ## 🔄 Recommended Workflow
+    1. [Suggested order of operations]
+    2. [How to track progress]
+    3. [When to review and update]
+
+    Focus on actionable insights that help the user get started immediately.
+
+# Prompt Chain Definition
+prompt_chain:
+  - step: discovery
+    prompt_ref: discovery_prompt
+    output_filter: "Extract raw task candidates with source context"
+
+  - step: analysis
+    prompt_ref: analysis_prompt
+    input_from: discovery
+    output_filter: "Structured task objects with priority and metadata"
+
+  - step: organization
+    prompt_ref: organization_prompt
+    input_from: analysis
+    output_filter: "Organized task list by priority categories"
+
+  - step: summary
+    prompt_ref: summary_prompt
+    input_from: organization
+    output_filter: "Comprehensive summary and action plan"
+
+# Main execution prompt that ties it all together
+prompt: |
+  You are an intelligent Smart Task Organizer using MCP filesystem capabilities. Execute the complete task organization workflow:
+
+  {% if source_type == "files" or source_type == "all" %}
+  📁 **File Scanning Phase:**
+  Use filesystem MCP to scan directories and read files containing potential tasks.
   {% endif %}
 
   {% if source_type == "emails" or source_type == "all" %}
-  2. Look for email files or export files (.eml, .msg, .txt) that might contain tasks:
-     - Search for action verbs: please, need to, should, must, review, complete, submit
-     - Look for deadline indicators: by, due, EOD, EOW, ASAP, urgent
-
+  📧 **Email Processing Phase:**
+  Locate and parse email files for task-related content.
   {% endif %}
 
   {% if source_type == "messages" or source_type == "all" %}
-  3. Check for chat logs, message exports, or conversation files:
-     - Extract commitments and promises made
-     - Identify questions that need responses
-     - Find meeting follow-ups required
-
+  💬 **Message Analysis Phase:**
+  Process chat logs and conversation files for commitments and action items.
   {% endif %}
 
   {% if source_type == "notes" or source_type == "all" %}
-  4. Scan for note files and brain dumps:
-     - Convert random thoughts into actionable items
-     - Organize ideas into concrete tasks
-     - Identify dependencies between tasks
-
+  📝 **Note Organization Phase:**
+  Extract and structure tasks from notes and brain dumps.
   {% endif %}
 
-  5. For each task found, extract and organize:
-     - Task description (what needs to be done)
-     - Priority level (urgent/high/medium/low)
-     - Project or category
-     - Deadline (if mentioned)
-     - Dependencies (what needs to be done first)
-     - Estimated time to complete
-
-  6. Create an organized task list with the following structure:
-
-  ## 🚀 URGENT TASKS (Today)
-  [Tasks that must be completed today]
-
-  ## 📅 HIGH PRIORITY (This Week)
-  [Important tasks with clear deadlines]
-
-  ## 🎯 MEDIUM PRIORITY (This Sprint/Month)
-  [Important but less time-sensitive tasks]
-
-  ## 📝 LOW PRIORITY (When Time Allows)
-  [Nice-to-have tasks and ideas]
-
-  7. For each task, include:
-     - Clear action verb (Review, Complete, Create, Contact, etc.)
-     - Specific deliverable or outcome
-     - Deadline (if available)
-     - Next immediate step to get started
+  Execute the complete prompt chain:
+  1. **Discovery**: Find all potential task sources
+  2. **Analysis**: Extract and prioritize structured task data
+  3. **Organization**: Create organized task lists by priority
+  4. **Summary**: Generate actionable insights and next steps
 
   {% if priority_level != "all" %}
-  8. Filter the results to show only {{ priority_level }} priority tasks.
+  **Priority Filter**: Focus exclusively on {{ priority_level }} priority tasks
   {% endif %}
 
   {% if project_filter %}
-  9. Focus specifically on tasks related to the "{{ project_filter }}" project.
+  **Project Focus**: Specialize in tasks related to "{{ project_filter }}"
   {% endif %}
 
-  10. Provide a summary of:
-      - Total tasks found
-      - Tasks by priority level
-      - Immediate next steps (top 3 tasks to start with)
-      - Any potential blockers or dependencies identified
+  Use the filesystem MCP capabilities to:
+  - Read file contents efficiently
+  - Navigate directory structures
+  - Process multiple files in parallel when possible
+  - Maintain context across file operations
 
-  Always make tasks actionable and specific. If you find vague items like "work on project," convert them to concrete next steps like "Review project requirements document and create task breakdown."
+  Apply intelligent task extraction, prioritization, and organization to transform scattered information into actionable, prioritized task lists.
