Apply suggestion from @blackgirlbytes
Signed-off-by: aegntic <research@aegntic.ai>

--- a/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
@@ -35,7 +35,7 @@ parameters:
 extensions:
   - type: stdio
     name: filesystem
-    cmd: goose
+    cmd: npx
     args: ["-y", "@modelcontextprotocol/server-filesystem", "/path/to/allowed/directory] 
     display_name: Filesystem
     timeout: 300
