Apply suggestion from @blackgirlbytes
Signed-off-by: aegntic <research@aegntic.ai>

--- a/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
+++ b/documentation/src/pages/recipes/data/recipes/smart-task-organizer.yaml
@@ -36,7 +36,7 @@ extensions:
   - type: stdio
     name: filesystem
     cmd: npx
-    args: ["-y", "@modelcontextprotocol/server-filesystem", "/path/to/allowed/directory] 
+    args: ["-y", "@modelcontextprotocol/server-filesystem", "/path/to/allowed/directory"] 
     display_name: Filesystem
     timeout: 300
     bundled: false
