Developer `analyze` tool improvement (#5030)
Signed-off-by: Arya Pratap Singh <notaryasingh@gmail.com>

--- a/crates/goose-mcp/Cargo.toml
+++ b/crates/goose-mcp/Cargo.toml
@@ -68,6 +68,7 @@ tree-sitter-go = "0.21"
 tree-sitter-java = "0.21"
 tree-sitter-kotlin = "0.3.8"
 devgen-tree-sitter-swift = "0.21.0"
+tree-sitter-ruby = "0.21.0"
 streaming-iterator = "0.1"
 rayon = "1.10"
 libc = "0.2"
